--- a/Android/app/src/main/res/layout/content_main.xml
+++ b/Android/app/src/main/res/layout/content_main.xml
@@ -27,7 +27,8 @@
         android:layout_marginBottom="20dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Password"
+        android:text=""
+        android:hint="Password"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/imageButton"
@@ -42,7 +43,8 @@
         android:ems="10"
         android:inputType="text"
         android:lineSpacingExtra="10sp"
-        android:text="Name"
+        android:text=""
+        android:hint="Username"
         android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
@@ -62,9 +64,9 @@
 
     <ImageButton
         android:id="@+id/profil"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_marginEnd="116dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/white"
         android:contentDescription="login"
