--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    // added from appauth
+    <color name="colorPrimary">#00aeef</color>
+    <color name="colorPrimaryDark">#00A2DF</color>
+    <color name="colorAccent">#FFAB00</color>
 </resources>
