--- a/Android/app/src/main/res/layout/chat.xml
+++ b/Android/app/src/main/res/layout/chat.xml
@@ -18,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.022"
+        android:maxLines="1"/>
 
     <EditText
         android:id="@+id/editTextText"
