--- a/Android/app/src/main/res/layout/chat.xml
+++ b/Android/app/src/main/res/layout/chat.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#17273D">
+    android:background="#17273D"
+    android:enableOnBackInvokedCallback="true">
 
     <TextView
         android:id="@+id/Header"
@@ -13,7 +14,7 @@
         android:text=""
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
